# feedback-synthesis-mcp

./: Dockerfile  README.md  pyproject.toml  server.json  smithery.yaml
src/feedback_synthesis_mcp/: __init__.py  client.py  server.py
