[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedback-synthesis-mcp"
version = "0.1.0"
description = "Customer feedback intelligence MCP — synthesize GitHub Issues, HN, and App Store reviews into ranked pain clusters. Pay-per-call via x402 micropayments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cortex Labs" }]
keywords = [
  "mcp",
  "feedback",
  "customer-intelligence",
  "pain-points",
  "product-analytics",
  "github-issues",
  "hacker-news",
  "app-store",
  "x402",
  "micropayments",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastmcp>=3.0.0",
  "requests>=2.31.0",
  "x402[evm]>=2.3.0",
  "eth-account>=0.13.0",
]

[project.urls]
Homepage = "https://pypi.org/project/feedback-synthesis-mcp/"
Repository = "https://github.com/sapph1re/feedback-synthesis-mcp"
Documentation = "https://github.com/sapph1re/feedback-synthesis-mcp#readme"
"Bug Tracker" = "https://github.com/sapph1re/feedback-synthesis-mcp/issues"

[project.scripts]
feedback-synthesis-mcp = "feedback_synthesis_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_synthesis_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/feedback_synthesis_mcp/", "README.md", "pyproject.toml"]
